# eulerHaskell

./: .gitignore  README.md  eulerHaskell.cabal  stack.yaml
app/: Main.hs
src/: Common.hs  Lib.hs  P001_020.hs  P021_040.hs
test/: Spec.hs
