name:                eulerHaskell
version:             0.1.0.0
synopsis:            Project Euler in Haskell
description:         Please see README.md
homepage:            https://github.com/roycrippen/eulerHaskell#readme
author:              roycrippen
maintainer:          roycrippen@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Common
                     , P001_020
  build-depends:       base >= 4.7 && < 5
                     , primes
  default-language:    Haskell2010

executable eulerHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parallel-io
                     , eulerHaskell
  default-language:    Haskell2010

test-suite eulerHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , eulerHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roycrippen/eulerHaskell
